tests/baselines/reference/unicodeExtendedEscapesInTemplates14(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
unicodeExtendedEscapesInTemplates14.ts(2,13): error TS1125: Hexadecimal digit expected.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== unicodeExtendedEscapesInTemplates14.ts (1 errors) ====
    // Shouldn't work, negatives are not allowed.
    var x = `\u{-DDDD}`;
                
!!! error TS1125: Hexadecimal digit expected.
    